<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Future Value Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="initial_message">$0.00</string>
    <string name="Interest_title">Annual Interest</string>
    <string name="Years_title">Years</string>
    <string name="Initial_Investment_title">Initial Investment</string>
    <string name="btn_text">Calculate</string>

</resources>

